--- a/public/css/index.css
+++ b/public/css/index.css
@@ -82,3 +82,9 @@ a { text-decoration: none; color: black; }
 .item_container {
     display: flex; flex-direction: column; align-items: center;
 }
+
+.preview-container { position: relative; }
+.preview-img { width: 150px; height: 150px; object-fit: cover; }
+.preview-img-delete { color: red; position:absolute; top: 10px; right: 10px; }
+a { text-decoration: none !important; color: black !important; }
+.swiper-wrapper { align-items: center; }
